--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,11 @@ catalogue==1.0.0
 certifi==2020.6.20
 chardet==3.0.4
 click==7.1.2
+cloudpickle==1.6.0
+cycler==0.10.0
 cymem==2.0.3
 dnspython==2.0.0
+en-core-web-md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-2.3.1/en_core_web_md-2.3.1.tar.gz
 Flask==1.1.2
 Flask-Migrate==2.5.3
 Flask-PyMongo==2.3.0
@@ -16,15 +19,19 @@ importlib-metadata==1.7.0
 itsdangerous==1.1.0
 Jinja2==2.11.2
 joblib==0.16.0
+kiwisolver==1.2.0
 Mako==1.1.3
 MarkupSafe==1.1.1
+matplotlib==3.3.1
 murmurhash==1.0.2
 numpy==1.19.1
 pandas==1.1.1
+Pillow==7.2.0
 plac==1.1.3
 preshed==3.0.2
 psycopg2-binary==2.8.5
 pymongo==3.11.0
+pyparsing==2.4.7
 python-dateutil==2.8.1
 python-dotenv==0.14.0
 python-editor==1.0.4
@@ -32,14 +39,16 @@ pytz==2020.1
 requests==2.24.0
 scikit-learn==0.23.2
 scipy==1.5.2
+seaborn==0.10.1
 six==1.15.0
 spacy==2.3.2
 SQLAlchemy==1.3.19
+squarify==0.4.3
 srsly==1.0.2
 thinc==7.4.1
 threadpoolctl==2.1.0
 tqdm==4.48.2
 urllib3==1.25.10
-wasabi==0.7.1
+wasabi==0.8.0
 Werkzeug==1.0.1
 zipp==3.1.0
